follow-up work on readme. added current hour

--- a/Docs/05/style.css
+++ b/Docs/05/style.css
@@ -6,6 +6,10 @@ textarea {
      background-color:lightsalmon;
  }
 
+ .doing {
+    background-color:lightyellow;
+}
+
  .undone{
      background-color: lightgreen;
  }
